tests/golden/errors/dict_missing_key.py
d: dict[int, int] = {}
d[1] = 10
print(d.get(2, -1))
print(d[2])
